--- a/src/pages/testdata/testdata.html
+++ b/src/pages/testdata/testdata.html
@@ -1,4 +1,17 @@
-<ion-content padding class="{{ theme }}" fullscreen>
+<!--
+  Generated template for the TestdataPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+<!-- <ion-header>
+  <ion-navbar>
+    <ion-title>testdata</ion-title>
+  </ion-navbar>
+</ion-header> -->
+
+<ion-content padding>
+
   <ion-grid>
     <ion-row style="height:90vh">
       <ion-col col-12 style="margin: auto">
@@ -20,7 +33,7 @@
         <ion-row >
           <ion-col text-center class="grad2" >
 
-              <textarea type="text" ion-button round style="height:7vh" [(ngModel)]="inputKey" text-center id="input" class="grad3"></textarea>
+              <!-- <textarea type="text" ion-button round style="height:7vh" text-center id="input" class="grad3"></textarea> -->
 
           </ion-col>
         </ion-row>
@@ -29,18 +42,21 @@
         <ion-row padding>
 
           <ion-col text-center padding>
-            <button ion-button round style="font-size: 5vh ;height:7vh;" (click)="goZip()">
-              ยืนยัน
+            <button ion-button round style="font-size: 2vh ;height:7vh;" (click)="playAudio(i)" >
+              ทดสอบไฟล์เสียง 600 ไฟล์
             </button>
-            <button ion-button round style="font-size: 5vh ;height:7vh;" (click)="goWeb()">
-              ไม่มีรหัส
-            </button>
-            <br />
-            <!-- <button ion-button round full style="font-size: 5vh ;height:7vh;" (click)="goHistory()">
-              ประวัติการใช้
-            </button> -->
+
 
           </ion-col>
+<br>
+            <ion-col text-center padding>
+            <label round style="font-size: 2vh ;height:7vh;" >
+               {{voiceId}} {{voiceFile}}
+            </label>
+            <br />
+          </ion-col>
+
+
         </ion-row>
 
         <ion-row padding>
@@ -52,4 +68,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
 </ion-content>
